# DeepSight-Django

./: .env  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHAT_SESSION_WORKFLOW.md  COPILOTKIT_INTEGRATION.md  DASHBOARD_DEVELOPMENT_PLAN.md  FRONTEND_INTEGRATION_EXAMPLE.md  HUAWEI_STYLE_GUIDE.md  Makefile  RAGFLOW_INTEGRATION_PLAN.md  RAGFLOW_REFACTOR_PROGRESS.md  README.md  REFACTORING_PLAN.md  clear_cache.sh  mindmap_generator_exampel.py  pyproject.toml  test_celery_check.py
backend/: .env.example  .gitignore  MIGRATION_RESET_GUIDE.md  REFACTORING_ASYNC_TASKS.md  diagnose_torch_import.py  env.template  inspect_copilotkit.py  inspect_sdk.py  manage.py  pyproject.toml  ragflow-sdk-http.md  requirements-dev.txt  requirements.txt  reset_migrations.sh  test_chat_streaming.py
backend/agents/: __init__.py
backend/backend/: celery.py  urls.py
backend/conferences/: admin.py  models.py  serializers.py  services.py  tests.py  urls.py  utils.py  views.py
backend/core/: cache.py  exceptions.py  middleware.py  mixins.py  pagination.py  permissions.py  services.py  signals.py  utils.py
backend/datasets/: README.md  __init__.py  apps.py  serializers.py  urls.py  views.py
backend/infrastructure/: apps.py
backend/notebooks/: admin.py  apps.py  constants.py  exceptions.py  models.py  signals.py  tasks.py  urls.py  views.py
backend/podcast/: admin.py  models.py  serializers.py  service.py  storage.py  tasks.py  urls.py  utils.py  views.py
backend/reports/: AGENTS.md  REFACTORING_PLAN.md  admin.py  image_utils.py  managers.py  models.py  orchestrator.py  serializers.py  storage.py  tasks.py  urls.py  utils.py  (+1 more)
(+686 files in other folders)
