[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles",
    "aiohttp",
    "anthropic",
    "backoff",
    "boto3",
    "celery",
    "crawl4ai",
    "crewai==0.150.0",
    "crewai-tools==0.58.0",
    "diskcache",
    "django",
    "django-cors-headers",
    "django-storages",
    "djangorestframework",
    "drf-yasg",
    "dspy-ai==2.4.9",
    "duckduckgo-search",
    "easyocr",
    "faiss-cpu",
    "fastapi",
    "faster-whisper",
    "ffmpeg-python",
    "google-api-python-client",
    "google-generativeai",
    "httpx",
    "imagehash",
    "langchain-community",
    "langchain-huggingface",
    "langchain-milvus",
    "langchain-openai",
    "langchain-qdrant",
    "langchain-text-splitters",
    "litellm",
    "mammoth",
    "markdown-pdf",
    "marker-pdf",
    "minio",
    "numpy",
    "open-clip-torch",
    "openai",
    "pandas",
    "pillow",
    "protobuf",
    "pydantic",
    "pydantic-settings",
    "pymilvus",
    "pymupdf",
    "pypdf2",
    "pytesseract",
    "python-dotenv",
    "python-magic",
    "python-pptx",
    "pytz",
    "qdrant-client",
    "rank-bm25",
    "redis",
    "regex",
    "requests",
    "rq",
    "scikit-learn",
    "sentence-transformers",
    "tabulate",
    "tavily-python",
    "toml",
    "torch",
    "tqdm",
    "trafilatura",
    "transformers",
    "ujson",
    "uvicorn",
    "weasyprint",
    "whisper",
    "wikipedia",
    "yt-dlp",
]
